casino-crypto-frontend/public/profile-content/content-qr.css
/* ... */
.content-qr-frame-bc,.content-qr-frame0b {
  height: auto;
  display: flex;
  position: relative;
  box-sizing: border-box;
}
.content-qr-frame0b {
  gap: 48px;
  width: 100%;
  max-width: 1245px;
  align-self: stretch;
  align-items: center;
  justify-content: space-between;
}
.content-qr-frame-bc {
  gap: 17px;
  width: fit-content;
  max-width: none;
  align-items: flex-start;
  flex-direction: column;
  justify-content: flex-start;
}
.content-qr-text-email-address-e91 {
  width: 100%;
  max-width: 100%;
  align-self: stretch;
  margin-top: 0;
  min-height: auto;
  text-align: left;
  margin-bottom: 0;
}
.content-qr-text-email-address-e92 {
  color: #fff;
  font-size: 22px;
  font-style: normal;
  font-family: "Gotham",sans-serif;
  font-weight: 500;
  line-height: 22px;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
.content-qr-text-email-address-e92,.content-qr-text-pa1,.content-qr-text-pa2 {
  margin-top: 0;
  text-align: left;
  margin-bottom: 0;
}
.content-qr-text-pa1 {
  width: 100%;
  max-width: auto;
  min-height: auto;
}
.content-qr-text-pa2 {
  color: #828282;
  font-size: 18px;
  font-style: normal;
  font-family: "Gotham",sans-serif;
  font-weight: 400;
  line-height: 18px;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
.content-qr-frame8f {
  gap: 10px;
  width: fit-content;
  height: auto;
  max-width: none;
  justify-content: flex-end;
}
.content-qr-frame-jg,.content-qr-frame-qw,.content-qr-frame8f {
  display: flex;
  position: relative;
  box-sizing: border-box;
  align-items: center;
}
.content-qr-frame-jg {
  width: 374px;
  padding: 6px;
  max-width: 374px;
  border-top: 1px solid #333232;
  min-height: 49px;
  border-left: 1px solid #333232;
  border-right: 1px solid #333232;
  border-bottom: 1px solid #333232;
  border-radius: 14px 14px 14px 14px;
  justify-content: flex-start;
  background-color: #0d0d0d;
}
.content-qr-frame-qw {
  gap: 10px;
  width: fit-content;
  height: auto;
  padding: 0 12px;
  max-width: none;
  justify-content: center;
}
.content-qr-text-com-fv1 {
  width: 100%;
  max-width: auto;
  margin-top: 0;
  min-height: auto;
  text-align: left;
  margin-bottom: 0;
}
.content-qr-text-com-fv2 {
  color: #828282;
  font-size: 16px;
  font-style: normal;
  margin-top: 0;
  text-align: left;
  font-family: "Gotham",sans-serif;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 0;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
.content-qr-frame-button-red4u {
  gap: 10px;
  width: 120px;
  display: flex;
  padding: 16px 36px;
  position: relative;
  max-width: 120px;
  box-shadow: inset 0 1px 0 0#f24f51,inset 0-1px 0 0#ff7476;
  box-sizing: border-box;
  min-height: 50px;
  align-items: center;
  border-radius: 12px 12px 12px 12px;
  justify-content: center;
  background-image: linear-gradient(180deg,#ac2e30 0%,#f75154 100%);
}
.content-qr-text-button-jj1 {
  width: 100%;
  max-width: auto;
  margin-top: 0;
  min-height: auto;
  text-align: center;
  margin-bottom: 0;
}
.content-qr-text-button-jj2 {
  color: #fff;
  font-size: 18px;
  font-style: normal;
  margin-top: 0;
  text-align: center;
  font-family: "Gotham",sans-serif;
  font-weight: 500;
  line-height: 18px;
  margin-bottom: 0;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
.content-qr-frame-line3-tt {
  width: 1245px;
  height: 0;
  align-self: stretch;
  border-top: 1px solid #1a1a1a;
  box-sizing: border-box;
  border-left: 1px solid #1a1a1a;
  border-right: 1px solid #1a1a1a;
  border-bottom: 1px solid #1a1a1a;
}
.content-qr-frame-is,.content-qr-frame7r {
  display: flex;
  position: relative;
  align-self: stretch;
  box-sizing: border-box;
  align-items: flex-start;
  justify-content: space-between;
}
.content-qr-frame-is {
  gap: 130px;
  width: 100%;
  height: auto;
  max-width: 1245px;
}
.content-qr-frame7r {
  gap: 17px;
  width: fit-content;
  max-width: none;
  flex-direction: column;
}
.content-qr-text-volume-wq1 {
  width: 100%;
  max-width: 100%;
  align-self: stretch;
  margin-top: 0;
  min-height: auto;
  text-align: left;
  margin-bottom: 0;
}
.content-qr-text-volume-wq2 {
  color: #fff;
  font-size: 22px;
  font-style: normal;
  margin-top: 0;
  text-align: left;
  font-family: "Gotham",sans-serif;
  font-weight: 500;
  line-height: 22px;
  margin-bottom: 0;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
.content-qr-vector-group11-lp {
  width: 251px;
  margin: 0;
  display: block;
  max-width: 251px;
  box-sizing: border-box;
  min-height: 22px;
}
.content-qr-frame-pq,.content-qr-frame0r {
  gap: 56px;
  width: fit-content;
  height: auto;
  display: flex;
  position: relative;
  max-width: none;
  box-sizing: border-box;
  align-items: center;
  justify-content: flex-start;
}
.content-qr-frame0r {
  gap: 17px;
  align-items: flex-start;
  flex-direction: column;
}
.content-qr-text-hidden-mode-bs1 {
  width: 100%;
  max-width: 100%;
  align-self: stretch;
  margin-top: 0;
  min-height: auto;
  text-align: left;
  margin-bottom: 0;
}
.content-qr-text-hidden-mode-bs2 {
  color: #fff;
  font-size: 22px;
  font-style: normal;
  font-family: "Gotham",sans-serif;
  font-weight: 500;
  line-height: 22px;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
.content-qr-text-hidden-mode-bs2,.content-qr-text6l1,.content-qr-text6l2 {
  margin-top: 0;
  text-align: left;
  margin-bottom: 0;
}
.content-qr-text6l1 {
  width: 100%;
  max-width: 444px;
  min-height: auto;
}
.content-qr-text6l2 {
  color: #828282;
  font-size: 18px;
  font-style: normal;
  font-family: "Gotham",sans-serif;
  font-weight: 400;
  line-height: 18px;
  letter-spacing: 0;
  text-transform: none;
  text-decoration: none;
}
/* ... */

